img align solved

--- a/style.css
+++ b/style.css
@@ -66,20 +66,16 @@ h1{
 }
 .set-img{
     width: 33.3%;
-    border: 10px solid rgb(255, 0, 0);
-    margin: 30px;
-    padding: 10px;
+    margin: 20px;
+    padding: 20px;
+    box-shadow:10px 10px 40px gray;
+    border-radius: 20px;
 }
 .set-img img{
     height: 250px;
     border-radius: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 350px;
 }
 .set-img p{
     text-align: justify;
-}
-h2{
-    padding-left: 15px;
 }
